refactor: 결합도 낮추기
* Application에서 객체들을 GameController에 넣어준다.

* enum클래스인 GameValue 사용과 interface인 Validator를 도입했다.